[gd_scene load_steps=7 format=2]

[ext_resource path="res://GViNT Example/TextBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://GViNT Example/GViNT Example.gd" type="Script" id=2]
[ext_resource path="res://GViNT Example/Character.gd" type="Script" id=3]
[ext_resource path="res://GViNT Example/ScriptRuntime.gd" type="Script" id=4]
[ext_resource path="res://GViNT Example/bar.png" type="Texture" id=5]
[ext_resource path="res://GViNT Example/foo.png" type="Texture" id=6]

[node name="GViNT Example" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 2 )

[node name="StartButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.5
margin_top = -10.0
margin_right = 20.5
margin_bottom = 10.0
text = "Start"

[node name="GvintRuntimeStateful" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Foo" type="Node" parent="GvintRuntimeStateful"]
script = ExtResource( 3 )
portrait = ExtResource( 6 )

[node name="Bar" type="Node" parent="GvintRuntimeStateful"]
script = ExtResource( 3 )
portrait = ExtResource( 5 )

[node name="SideMenu" type="VBoxContainer" parent="."]
anchor_left = 0.99
anchor_top = 0.939
anchor_right = 0.99
anchor_bottom = 0.939
margin_left = -75.0
margin_top = -92.0
grow_horizontal = 2
grow_vertical = 2

[node name="AdvanceButton" type="Button" parent="SideMenu"]
margin_right = 75.0
margin_bottom = 20.0
text = "advance"

[node name="UndoButton" type="Button" parent="SideMenu"]
margin_top = 24.0
margin_right = 75.0
margin_bottom = 44.0
text = "undo"

[node name="QuicksaveButton" type="Button" parent="SideMenu"]
margin_top = 48.0
margin_right = 75.0
margin_bottom = 68.0
text = "quicksave"

[node name="QuickloadButton" type="Button" parent="SideMenu"]
margin_top = 72.0
margin_right = 75.0
margin_bottom = 92.0
text = "quickload"

[node name="TextBox" parent="." instance=ExtResource( 1 )]

[node name="ChoiceMenu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="script_execution_finished" from="GvintRuntimeStateful" to="." method="_on_GvintRuntimeStateful_script_execution_finished"]
[connection signal="pressed" from="SideMenu/AdvanceButton" to="GvintRuntimeStateful" method="_on_AdvanceButton_pressed"]
[connection signal="pressed" from="SideMenu/UndoButton" to="GvintRuntimeStateful" method="step_backwards"]
[connection signal="pressed" from="SideMenu/UndoButton" to="GvintRuntimeStateful" method="_on_UndoButton_pressed"]
[connection signal="pressed" from="SideMenu/QuicksaveButton" to="GvintRuntimeStateful" method="_on_QuicksaveButton_pressed"]
[connection signal="pressed" from="SideMenu/QuickloadButton" to="GvintRuntimeStateful" method="_on_QuickloadButton_pressed"]
[connection signal="advance_text" from="TextBox/HBoxContainer/MarginContainer/RichTextLabel" to="GvintRuntimeStateful" method="_on_RichTextLabel_advance_text"]

[editable path="TextBox"]
